--- a/listPage/.config/uwsgi/listPage.ini
+++ b/listPage/.config/uwsgi/listPage.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-chdir = /srv/contentsList/listPage/
+chdir = /srv/contentsList/listPage
 module = listPage.wsgi:application
 home = /home/ubuntu/myvenv/
 
@@ -7,12 +7,12 @@ uid = deploy
 gid = deploy
 
 socket = /tmp/listPage.sock
-chomd-socket = 666
+chmod-socket = 666
 chown-socket = deploy:deploy
 
 enable-threads = true
 master = true
 vacuum = true
 pidfile = /tmp/listPage.pid
-logto = /var/log/uwsgi/listpage/@(exec://date +%%Y-%%m-%%d).log
+logto = /var/log/uwsgi/listPage/@(exec://date +%%Y-%%m-%%d).log
 log-reopen = true
