--- a/listPage/.config/nginx/listPage.conf
+++ b/listPage/.config/nginx/listPage.conf
@@ -1,11 +1,11 @@
 server {
-  listen 80;
+    listen 80;
     server_name *.compute.amazonaws.com;
-      sharset utf-8;
-        client_max_body_size 128M;
+    charset utf-8;
+    client_max_body_size 128M;
 
-          location / {
-            uwsgi_pass unix:///tmp/listPage.sock;
-            include uwsgi_params;
-          }
+    location / {
+        uwsgi_pass  unix:///tmp/listPage.sock;
+        include     uwsgi_params;
+    }
 }
