--- a/listPage/.config/nginx/listPage.conf
+++ b/listPage/.config/nginx/listPage.conf
@@ -8,4 +8,8 @@ server {
         uwsgi_pass  unix:///tmp/listPage.sock;
         include     uwsgi_params;
     }
+
+    location /static/ {
+        alias /srv/contentsList/listPage/static/;
+    }
 }
